# estoraged

./: .clang-format  .clang-ignore  .clang-tidy  .gitignore  70-estoraged.rules  MAINTAINERS  OWNERS  README.md  estoraged.cpp  estoraged.hpp  estoraged@.service.in  groups  main.cpp  meson.build  meson.options  meson_options.txt  project.config
erase/: erase.hpp  pattern.cpp  pattern.hpp  sanitize.cpp  sanitize.hpp  verifyGeometry.cpp  verifyGeometry.hpp
include/: config.h.in  cryptErase.hpp  cryptoErase.hpp  cryptsetupInterface.hpp  erase.hpp  estoraged.hpp  estoraged_conf.hpp.in  filesystemInterface.hpp  getConfig.hpp  logging.hpp  meson.build  pattern.hpp  sanitize.hpp  util.hpp  verifyDriveGeometry.hpp  verifyGeometry.hpp  zero.hpp
include/linux/mmc/: core.h  mmc.h
service_files/: meson.build  mmc-bkops-enabled.target  xyz.openbmc_project.eStoraged.service  xyz.openbmc_project.eStoraged.service.in
src/: cryptsetupInterface.cpp  estoraged.cpp  getConfig.cpp  logging.cpp  main.cpp  meson.build  util.cpp
src/erase/: cryptErase.cpp  cryptoErase.cpp  erase.cpp  findSize.cpp  meson.build  pattern.cpp  sanitize.cpp  verifyDriveGeometry.cpp  verifyGeometry.cpp  zero.cpp
src/test/: estoraged_test.cpp  meson.build  util_test.cpp
src/test/erase/: crypto_test.cpp  meson.build  pattern_test.cpp  sanitize_test.cpp  verifyGeometry_test.cpp  zero_test.cpp
src/test/include/: estoraged_test.hpp
subprojects/: boost.wrap  sdbusplus.wrap
subprojects/packagefiles/boost/: meson.build
test/erase/: meson.build  sanitize_test.cpp
xyz/openbmc_project/: eStoraged.errors.yaml  eStoraged.interface.yaml
xyz/openbmc_project/eStoraged/: meson.build
